package com.Niccolo;

public interface DivisionStrategy {
}
