package com.Niccolo;

public class EqualDivision implements DivisionStrategy {
}
