package com.Niccolo;

public class PercentualDivision implements DivisionStrategy {
}
