@startuml
'https://plantuml.com/class-diagram

'--- Entità Principali ---
class User {
  - id: final String
  - name: String
  - email: String
}

class Group {
  - id: final String
  - name: String
  - description: String
}

class Expense {
  - id: final String
  - amount: Money
  - payer: User
  - involvedUsers: List<User>
  - date: LocalDate
  - description: String
  - group: Group

  'Funzioni
  + getGroup(): Optional<Group>
}

class Money{
  - amount: BigDecimal
  - currency: Currency - java.util.Currency -
}

'--- Classi Strategy ---
interface DivisionStrategy {
  + calcolaDebiti(spesa: Expense)
}

class EqualDivision {
  + calcolaDebiti(spesa: Expense)
}

class PercentualDivision {
  + calcolaDebiti(spesa: Expense)
}


'--- Relazioni Logiche ---
' Un gruppo è formato da Utenti, gli utenti possono
' non appartenere ad un gruppo
Group "0..*" o--> "0..*" User: "Formato da"

' Ogni spesa può essere legata a massimo 1 gruppo
Group "0..1" <-right- "*" Expense: "Contiene"

' Una Spesa è pagata da un solo Utente
User "1" <-- "*" Expense : "Pagata da"

' Una Spesa "usa" una sola Strategia di Divisione
' un solo Money
' e coinvolge più utenti
DivisionStrategy "1" <-left- "*" Expense
Expense "*" *--> "1" Money
Expense "*" --> "*" User: "Coinvolge"

'--- Implementazione Strategy ---
EqualDivision .up.|> DivisionStrategy
PercentualDivision .up.|> DivisionStrategy

@enduml